==> davidhuwyler/openmv/src/omv_imxrt/lepton.c <==
#include "mp.h"
#include "irq.h"
#include "cambus.h"
#include "sensor.h"
#include "systick.h"
#include "framebuffer.h"
#include "mpconfigboard.h"
#include "omv_boardconfig.h"
#include "common.h"
#include "fsl_common.h"
#include "fsl_debug_console.h"
#include "fsl_clock.h"
#include "fsl_lpspi.h"
#include "fsl_edma.h"
#include "fsl_lpspi_edma.h"
#include "fsl_dmamux.h"
#include "fsl_iomuxc.h"
#include "crc16.h"
#include "LEPTON_SDK.h"
#include "LEPTON_AGC.h"
#include "LEPTON_SYS.h"
#include "LEPTON_VID.h"
#include "LEPTON_OEM.h"
#include "LEPTON_RAD.h"
#include "LEPTON_I2C_Reg.h"
#define VOSPI_LINE_PIXELS       (80)
#define VOSPI_NUMBER_PACKETS    (60)
#define VOSPI_SPECIAL_PACKET    (20)
#define VOSPI_LINE_SIZE         (80 * 2)
#define VOSPI_HEADER_SIZE       (4)
#define VOSPI_PACKET_SIZE       (VOSPI_HEADER_SIZE + VOSPI_LINE_SIZE)
#define VOSPI_HEADER_SEG(buf)   (((buf[0] >> 4) & 0x7))
#define VOSPI_HEADER_PID(buf)   (((buf[0] << 8) | (buf[1] << 0)) & 0x0FFF)
#define VOSPI_HEADER_CRC(buf)   (((buf[2] << 8) | (buf[3] << 0)))
#define VOSPI_FIRST_PACKET      (0)
#define VOSPI_FIRST_SEGMENT     (1)
#define LEPTON_TIMEOUT          (1000)
#define DEFAULT_MIN_TEMP        (-17.7778f)
#define DEFAULT_MAX_TEMP        (37.7778f)
#define DRIVER_MASTER_SPI Driver_SPI4
#define LEPTON_LPSPI_MASTER_IRQN (LPSPI4_IRQn)
#define LEPTON_LPSPI_DEALY_COUNT 0xfffffU
#define LEPTON_LPSPI_MASTER_DMA_BASEADDR DMA0
#define LPSPI_CLOCK_SOURCE_SELECT  (1U)
#define LPSPI_CLOCK_SOURCE_DIVIDER (7U)

static void lepton_sync()
{
    LPSPI_MasterTransferAbortEDMA(LPSPI4,&spiDmaTransfer);
    debug_printf("resync...\n");
    systick_sleep(200);

    vospi_resync = false;
    vospi_pid = VOSPI_FIRST_PACKET;
    vospi_seg = VOSPI_FIRST_SEGMENT;

    LPSPI_MasterTransferEDMA(LPSPI4, &spiDmaTransfer, &spiTransfer);
}

static int lepton_reset(sensor_t *sensor, bool measurement_mode)
{
    DCMI_PWDN_LOW();
    systick_sleep(10);

    DCMI_PWDN_HIGH();
    systick_sleep(10);

    DCMI_RESET_LOW();
    systick_sleep(10);

    DCMI_RESET_HIGH();
    systick_sleep(1000);

    LEP_RAD_ENABLE_E rad;
    LEP_AGC_ROI_T roi;
    memset(&LEPHandle, 0, sizeof(LEP_CAMERA_PORT_DESC_T));

    uint32_t start = HAL_GetTick();
    while(true)
    {
        if (LEP_OpenPort(0, LEP_CCI_TWI, 0, &LEPHandle) == LEP_OK) {
            break;
        }
        if (HAL_GetTick() - start >= LEPTON_TIMEOUT) {
            return -1;
        }
        systick_sleep(1);
    }

    start = HAL_GetTick();
    while(true)
    {
        LEP_SDK_BOOT_STATUS_E status;
        if (LEP_GetCameraBootStatus(&LEPHandle, &status) != LEP_OK) {
            return -1;
        }
        if (status == LEP_BOOT_STATUS_BOOTED) {
            break;
        }
        if (HAL_GetTick() - start >= LEPTON_TIMEOUT) {
            return -1;
        }
        systick_sleep(1);
    }

    start = HAL_GetTick();
    while(true)
    {
        LEP_UINT16 status;
        if (LEP_DirectReadRegister(&LEPHandle, LEP_I2C_STATUS_REG, &status) != LEP_OK) {
            return -1;
        }
        if (!(status & LEP_I2C_STATUS_BUSY_BIT_MASK)) {
            break;
        }
        if (HAL_GetTick() - start >= LEPTON_TIMEOUT) {
            return -1;
        }
        systick_sleep(1);
    }

    if (LEP_GetRadEnableState(&LEPHandle, &rad) != LEP_OK
        || LEP_GetAgcROI(&LEPHandle, &roi) != LEP_OK) {
        return -1;
    }

    if (!measurement_mode) {
        if (LEP_SetRadEnableState(&LEPHandle, LEP_RAD_DISABLE) != LEP_OK
            || LEP_SetAgcEnableState(&LEPHandle, LEP_AGC_ENABLE) != LEP_OK
            || LEP_SetAgcCalcEnableState(&LEPHandle, LEP_AGC_ENABLE) != LEP_OK) {
            return -1;
        }
    }

    h_res = roi.endCol + 1;
    v_res = roi.endRow + 1;
    radiometry = (rad == LEP_RAD_ENABLE);

    if (v_res > 60) {
        vospi_packets = 240;
    } else {
        vospi_packets = 60;
    }

    // resync and enable DMA before the first snapshot.
    vospi_resync = true;
    return 0;
}

static int snapshot(sensor_t *sensor, image_t *image, streaming_cb_t streaming_cb)
{
    fb_update_jpeg_buffer();

    if (sensor_check_buffsize(sensor) == -1) {
        return -1;
    }
    
    if ((!h_res) || (!v_res) || (!sensor->framesize) || (!sensor->pixformat)) {
        return -1;
    }

    bool frame_ready = false;
    bool streaming = (streaming_cb != NULL); // Streaming mode.

    do {
        //HAL_NVIC_DisableIRQ(LEPTON_SPI_DMA_IRQn);
        vospi_pid = VOSPI_FIRST_PACKET;
        vospi_seg = VOSPI_FIRST_SEGMENT;
        //HAL_NVIC_EnableIRQ(LEPTON_SPI_DMA_IRQn);

        LPSPI_MasterTransferEDMA(LPSPI4, &spiDmaTransfer, &spiTransfer);

        // Snapshot start tick
        uint32_t tick_start = HAL_GetTick();
        bool reset_tried = false;

        do {
            if (vospi_resync == true) {
                lepton_sync();
            }
            if (frame_ready == true && streaming_cb != NULL) {
                // Start streaming the frame while a new one is captured.
                streaming = streaming_cb(image);
                frame_ready = false;
            } else {
                __WFI();
            }
            if ((HAL_GetTick() - tick_start) >= 20000) {
                // Timeout error.
                return -1;
            }
            if ((!reset_tried) && ((HAL_GetTick() - tick_start) >= 10000)) {
                reset_tried = true;

                // The FLIR lepton might have crashed so reset it (it does this).
                bool temp_h_mirror = h_mirror;
                bool temp_v_flip = v_flip;
                int ret = lepton_reset(sensor, measurement_mode);
                h_mirror = temp_h_mirror;
                v_flip = temp_v_flip;

                if (ret < 0) {
                    return -1;
                }

                // Reset the VOSPI interface again.
                //HAL_NVIC_DisableIRQ(LEPTON_SPI_DMA_IRQn);
                vospi_pid = VOSPI_FIRST_PACKET;
                vospi_seg = VOSPI_FIRST_SEGMENT;
                //HAL_NVIC_EnableIRQ(LEPTON_SPI_DMA_IRQn);
            }
        } while (vospi_pid < vospi_packets); // only checking one volatile var so atomic.

        MAIN_FB()->w = MAIN_FB()->u;
        MAIN_FB()->h = MAIN_FB()->v;

        switch (sensor->pixformat) {
            case PIXFORMAT_GRAYSCALE: {
                MAIN_FB()->bpp = IMAGE_BPP_GRAYSCALE;
                break;
            }
            case PIXFORMAT_RGB565: {
                MAIN_FB()->bpp = IMAGE_BPP_RGB565;
                break;
            }
            default: {
                break;
            }
        }

        image->w = MAIN_FB()->u;
        image->h = MAIN_FB()->v;
        image->bpp = MAIN_FB()->bpp; // invalid
        image->data = MAIN_FB()->pixels; // valid

        uint16_t *src = (uint16_t*) vospi_buffer;

        float x_scale = resolution[sensor->framesize][0] / ((float) h_res);
        float y_scale = resolution[sensor->framesize][1] / ((float) v_res);
        // MAX == KeepAspectRationByExpanding - MIN == KeepAspectRatio
        float scale = IM_MAX(x_scale, y_scale), scale_inv = 1.0f / scale;
        int x_offset = (resolution[sensor->framesize][0] - (h_res * scale)) / 2;
        int y_offset = (resolution[sensor->framesize][1] - (v_res * scale)) / 2;
        // The code below upscales the source image to the requested frame size
        // and then crops it to the window set by the user.

        LEP_SYS_FPA_TEMPERATURE_KELVIN_T kelvin;
        if (measurement_mode && (!radiometry)) {
            if (LEP_GetSysFpaTemperatureKelvin(&LEPHandle, &kelvin) != LEP_OK) {
                return -1;
            }
        }

        for (int y = y_offset, yy = fast_ceilf(v_res * scale) + y_offset; y < yy; y++) {
            if ((MAIN_FB()->y <= y) && (y < (MAIN_FB()->y + MAIN_FB()->v))) { // user window cropping

                uint16_t *row_ptr = src + (fast_floorf(y * scale_inv) * h_res);

                for (int x = x_offset, xx = fast_ceilf(h_res * scale) + x_offset; x < xx; x++) {
                    if ((MAIN_FB()->x <= x) && (x < (MAIN_FB()->x + MAIN_FB()->u))) { // user window cropping

                        // Value is the 14/16-bit value from the FLIR IR camera.
                        // However, with AGC enabled only the bottom 8-bits are non-zero.
                        int value = __REV16(row_ptr[fast_floorf(x * scale_inv)]);

                        if (measurement_mode) {
                            // Need to convert 14/16-bits to 8-bits ourselves...
                            if (!radiometry) value = (value - 8192) + kelvin;
                            float celsius = (value * 0.01f) - 273.15f;
                            celsius = IM_MAX(IM_MIN(celsius, max_temp), min_temp);
                            value = IM_MAX(IM_MIN(IM_DIV(((celsius - min_temp) * 255), (max_temp - min_temp)), 255), 0);
                        }

                        int t_x = x - MAIN_FB()->x;
                        int t_y = y - MAIN_FB()->y;

                        if (h_mirror) t_x = MAIN_FB()->u - t_x - 1;
                        if (v_flip) t_y = MAIN_FB()->v - t_y - 1;

                        switch (sensor->pixformat) {
                            case PIXFORMAT_GRAYSCALE: {
                                IMAGE_PUT_GRAYSCALE_PIXEL(image, t_x, t_y, value & 0xFF);
                                break;
                            }
                            case PIXFORMAT_RGB565: {
                                IMAGE_PUT_RGB565_PIXEL(image, t_x, t_y, sensor->color_palette[value & 0xFF]);
                                break;
                            }
                            default: {
                                break;
                            }
                        }
                    }
                }
            }
        }

        frame_ready = true;
    } while (streaming && streaming_cb != NULL);
    return 0;
}

int lepton_init(sensor_t *sensor)
{
    sensor->gs_bpp              = sizeof(uint8_t);
    sensor->reset               = reset;
    sensor->sleep               = sleep;
    sensor->snapshot            = snapshot;
    sensor->read_reg            = read_reg;
    sensor->write_reg           = write_reg;
    sensor->set_pixformat       = set_pixformat;
    sensor->set_framesize       = set_framesize;
    sensor->set_framerate       = set_framerate;
    sensor->set_contrast        = set_contrast;
    sensor->set_brightness      = set_brightness;
    sensor->set_saturation      = set_saturation;
    sensor->set_gainceiling     = set_gainceiling;
    sensor->set_quality         = set_quality;
    sensor->set_colorbar        = set_colorbar;
    sensor->set_special_effect  = set_special_effect;
    sensor->set_auto_gain       = set_auto_gain;
    sensor->get_gain_db         = get_gain_db;
    sensor->set_auto_exposure   = set_auto_exposure;
    sensor->get_exposure_us     = get_exposure_us;
    sensor->set_auto_whitebal   = set_auto_whitebal;
    sensor->get_rgb_gain_db     = get_rgb_gain_db;
    sensor->set_hmirror         = set_hmirror;
    sensor->set_vflip           = set_vflip;
    sensor->set_lens_correction = set_lens_correction;
    sensor->ioctl               = ioctl;

    SENSOR_HW_FLAGS_SET(sensor, SENSOR_HW_FLAGS_VSYNC, 1);
    SENSOR_HW_FLAGS_SET(sensor, SENSOR_HW_FLAGS_HSYNC, 0);
    SENSOR_HW_FLAGS_SET(sensor, SENSOR_HW_FLAGS_PIXCK, 0);
    SENSOR_HW_FLAGS_SET(sensor, SENSOR_HW_FLAGS_FSYNC, 0);
    SENSOR_HW_FLAGS_SET(sensor, SENSOR_HW_FLAGS_JPEGE, 0);

    LPSPI4_InitPins();
    CLOCK_SetMux(kCLOCK_LpspiMux, LPSPI_CLOCK_SOURCE_SELECT);
    CLOCK_SetDiv(kCLOCK_LpspiDiv, LPSPI_CLOCK_SOURCE_DIVIDER);

    spiConfig.baudRate = 10000000;
    spiConfig.bitsPerFrame = 8;
    spiConfig.cpol = kLPSPI_ClockPolarityActiveLow;
    spiConfig.cpha = kLPSPI_ClockPhaseSecondEdge;
    spiConfig.direction = kLPSPI_MsbFirst;
    spiConfig.pcsToSckDelayInNanoSec = 1000000000 / spiConfig.baudRate;
    spiConfig.lastSckToPcsDelayInNanoSec = 1000000000 / spiConfig.baudRate;
    spiConfig.betweenTransferDelayInNanoSec = 1000000000 / spiConfig.baudRate;
    spiConfig.whichPcs = kLPSPI_Pcs0; //ChipSelect, there are 4 possible Pins
    spiConfig.pcsActiveHighOrLow = kLPSPI_PcsActiveLow;
    spiConfig.pinCfg = kLPSPI_SdiInSdoOut;
    spiConfig.dataOutConfig =kLpspiDataOutRetained;
    LPSPI_MasterInit(LPSPI4, &spiConfig, LPSPI_MASTER_CLOCK_FREQ);

    DMAMUX_Init(DMAMUX);
    EDMA_GetDefaultConfig(&dmaConfig);
    EDMA_Init(DMA0, &dmaConfig);

    DMAMUX_SetSource(DMAMUX, 7 /*DMA RX Channel*/, kDmaRequestMuxLPSPI4Rx);
    DMAMUX_EnableChannel(DMAMUX, 7);
    EDMA_CreateHandle(&rxHandle, DMA0, 7);

    DMAMUX_SetSource(DMAMUX, 6 /*DMA TX Channel*/, kDmaRequestMuxLPSPI4Tx);
    DMAMUX_EnableChannel(DMAMUX, 6);
    EDMA_CreateHandle(&txHandle, DMA0, 6);

    LPSPI_MasterTransferCreateHandleEDMA(LPSPI4, &spiDmaTransfer, LPSPI_MasterUserCallback, NULL, &rxHandle,&txHandle);
    
    spiTransfer.txData   = NULL;
    spiTransfer.rxData   = vospi_packet;  //LineBuffer
    spiTransfer.dataSize = VOSPI_PACKET_SIZE;
    spiTransfer.configFlags = kLPSPI_MasterPcs0 | kLPSPI_MasterPcsContinuous |kLPSPI_MasterByteSwap;;

    return 0;
}

int lepton_init(sensor_t *sensor)
{
    return -1;
}
